feat: Dialog popups - Implemented dialog popups - Changed intro screen - When pressing an animal a dialog will appear - These dialogs will either ask to start a game or give info about an animal with their respective sound - Added new images for the intro screen